Change over time now spits out a csv file that contains the number of methods added, modified, removed over time on a date by date basis.

--- a/ChangeOverTime/ChangeOverTime.csproj
+++ b/ChangeOverTime/ChangeOverTime.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AllMethods.cs" />
+    <Compile Include="ChangeStatisticsByDate.cs" />
     <Compile Include="ChangeType.cs" />
     <Compile Include="CSharpMethod.cs" />
     <Compile Include="CSharpMethodChange.cs" />
